--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <label for="saludar">
-        <input type="button" name="saludar" value="Saludar">
+        <input type="button" name="saludar" value="Saludar" onclick="alert('Hola!')">
     </label>
     
 </body>
