Archivo JS creado y div agregado en HTML

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="eventos.js"></script>
 </head>
 <body>
 
+    <div style="padding: 5px; background-color: green;">
     <label for="saludar">
         <input type="button" name="saludar" value="Saludar" onclick="alert('Hola!')">
     </label>
+    </div>
     
 </body>
 </html>
