Solución de click creada

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div style="padding: 5px; background-color: green;">
     <label for="saludar">
-        <input type="button" name="saludar" value="Saludar" onclick="alert('Hola!')">
+        <input type="button" name="saludar" value="Saludar">
     </label>
     </div>
     
